@@ -40,9 +40,11 @@ they occurred between. For more detailed information see the
 @item Other Changes:
 @itemize @minus
 
-@item Sawfish-Ui does now allow negative values in Spinbuttons [Christopher Bratusek]
+@item Sawfish-Ui does now allow negative values in SpinButtons by default [Christopher Bratusek]
 
 @item Sawfish does now appear in KDE4s WM Selector [Christopher Bratusek]
+
+@item Update GNOME-Detection [Alexey I. Froloff]
 
 @item Changing raise-tabs-on-hover takes effect immediately now [Christopher Bratusek]
 
