@@ -5,6 +5,8 @@
 
 	* lisp/sawfish/wm/ext/infinite-desktop.jl: fixed cursor warping [Jeremy Hankins]
 
+	* lisp/sawfish/wm/defaults.jl: update GNOME-Check for recent versions [Alexey I. Froloff]
+
 2009-07-18  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/gtk/widget.jl: 	- allow negative values in spinbuttons in sawfish-ui
 					- connect spinbuttons to value-changed signal (allows typing in the value manually)
